    * 4131 FIX: Fixed broken WATO site login when using password containing special characters...
    * 4133 FIX: Do not suppress site specific global issues during WATO activation
    * 4134 FIX: Unified ineffective rulesets view with other ruleset list views
    * 3999 FIX: Added core restart note to bulk host rename page
    * 4150 FIX: Avoid exception in host search when searching for empty texts

    Notifications:
    * 4042 FIX: Fix missing From address in synchronous SMTP notifications...

    BI:
    * 4002 BI: Major Rework of Code. Apache processes now share computated data...
    * 3991 FIX: BI Aggregations: no longer show duplicate aggregations when an aggregation has mulitple groups

    Event Console:
    * 4132 Monitoring notifications: Add EC_ORIG_HOST to notifiation context...
    * 4148 EC: reorder entries in Performance snapin, add overflows and load
    * 4166 New view command: archive events of hosts...
    * 4151 Use notification fallback also for hosts not known to the monitoring...
    * 4097 FIX: Event console: Make writing of status file more robust...
    * 4147 FIX: Always show rule analyser result on Generate, not only after previous Try out...
    * 4149 FIX: Fix notifications from Event Console if host has more than one contact...
    * 4152 FIX: Fix matching of hosts when forwarding notifications from Event Console...

    Livestatus:
    * 3651 FIX: Fixed potential segfault with Nagios core when accessing log/commands table via Livestatus....

    HW/SW-Inventory:
    * 3916 FIX: History view: Only showing removed/added entries tables when there are entries
    * 4066 FIX: Fixed broken titles of nodes in inventory views
    * 4067 FIX: Fixed broken inventory history view in current master...
    * 3917 FIX: Fixed broken dicttable rendering
    * 3918 FIX: Inventory history: Fixed possible exception when renedering history tables...
    * 4073 FIX: Cleaned up cluster host handling in HW/SW inventory...


1.4.0i2:
    Core & Setup: