@@ -129,6 +129,7 @@
     * 4133 FIX: Do not suppress site specific global issues during WATO activation
     * 4134 FIX: Unified ineffective rulesets view with other ruleset list views
     * 3999 FIX: Added core restart note to bulk host rename page
+    * 4141 FIX: Fixed possible exception in web cron: argument of type 'NoneType' is not iterable (g_host_attribute)
     * 4150 FIX: Avoid exception in host search when searching for empty texts
 
     Notifications:
